	 * fixed global variable default value assignment with hard types 
	 * fixed default value assignments for types generically
	 * assume code returns NOTHING if no return type is declared and
	   PO_REQUIRE_TYPES is set (i.e %require-types parse directive)
	 * updated object += hash to check member access and throw an
	   exception if necessary

2010.02.23: David Nichols
	 * applied hard typing to lib/QC_GetOpt.cpp and to split in
	   lib/ql_string.cpp
	 * fixed variant matching bugs at parse and runtime in Function.cc
	 * do not raise a NON-EXISTENT-METHOD-CALL warning at parse time if
	   the class has a methodGate() method
	 * fixed parse type checking for hash - list operation
	 * implemented type specifier "any" to mean any type may be assigned
	 * updated user typing to allow for assigning already-resolved types
	   at parse time
 
2010.02.21: David Nichols
	 * minor updates to enable Qore to compile with Cygwin
	 * implemented QORE_OPT_SIGNAL_HANDLING option and constant:
	   HAVE_SIGNAL_HANDLING
	 * made compilation of signal handling code optional	   

2010.02.20: David Nichols
	 * implemented %require-types parse directive (PO_REQUIRE_TYPES) to
	   require type information in all declarations
	 * implemented two-phase commit for global variables in the 
	   QoreProgram class

2010.02.18: David Nichols
	 * updated the Queue class documentation to clarify what a 0 argument
	   means with Queue::pop() and Queue::get()
	 * fixed global variable initialization according to default value of
	   its type

2010.02.17: David Nichols
	 * fixed a bug setting the program context for imported functions
	 * fixed a bug tracking thread call stacks

2010.02.16: David Nichols
	 * fixed a bug where if local variables were used in a reference 
	   expression with the background operator, whenever the reference
	   was accessed in the called code a crash would result

2010.02.15: David Nichols
	 * added warning constants and documented warning masks in Program
	   methods