@@ -14,6 +14,8 @@
 	   PO_REQUIRE_TYPES is set (i.e %require-types parse directive)
 	 * updated object += hash to check member access and throw an
 	   exception if necessary
+	 * updated hard typing support to not initialize variables and members
+	   with a default value based on their type
 
 2010.02.23: David Nichols
 	 * applied hard typing to lib/QC_GetOpt.cpp and to split in
